--- a/css/form.style.css
+++ b/css/form.style.css
@@ -127,14 +127,14 @@ textarea:focus {
   display: inline-block;
   margin-bottom: var(--spacing-md);
   padding: 6px 12px;
-  background: rgba(255, 255, 255, 0.1);
   color: var(--color-accent);
   font-weight: bold;
-  text-decoration: none;
   border-radius: var(--border-radius-md);
-  backdrop-filter: blur(6px);
+  outline: none;
+  border: none;
   transition: background 0.3s ease, transform 0.3s ease;
   font-size: var(--font-size-md);
+
 }
 
 .back-button:hover {
