--- a/css/futsal.css
+++ b/css/futsal.css
@@ -61,7 +61,7 @@ nav.active { display: flex; flex-direction: column; position: absolute;
   margin: 20px 40px;
   background: #00bfff;
   color:white;
-  padding: 10px 18px;
+  padding: 10px 20px;
   border-radius: 20px;
   font-weight: 600;
   text-decoration: none;
@@ -73,7 +73,7 @@ nav.active { display: flex; flex-direction: column; position: absolute;
   background: var(--brand);
   padding: 10px 20px;
   border-radius: 25px;
-  color: #000;
+  color: white;
   font-weight: 600;
   border: none;
   cursor: pointer;
